fixing Compare application types link alignment

--- a/frontend/src/routes/Applications/style.css
+++ b/frontend/src/routes/Applications/style.css
@@ -27,3 +27,7 @@
 .portal-controls > div {
   margin-left: 16px;
 }
+
+.compare-applications-button:hover {
+  text-decoration: underline !important;
+}
